--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -13,13 +13,15 @@ body{
     background-image: url("https://raw.githubusercontent.com/2020-Summer-Cohort/reviews-site-codingonthefly/dev/src/main/resources/static/images/home.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    min-height: 175px;
     opacity: 1;
     color: white;
 }
 
-.weekly-container, .monthly-container {
+.weekly-container, .monthly-container, .review-container, .hashtag-city {
     background-color: lightblue;
 }
+
 
 .navlink-color, .navlink-color:visited {
     text-decoration: none;
@@ -30,14 +32,13 @@ header {
     background-color: rgba(10, 10, 10, 0.25);
 }
 
-#brand-name {
-    padding-left: 20px;
-    padding-top: 20px;
-}
-
 .hashtag-links {
     text-decoration: none;
     color: white;
+}
+
+.visiting-cities {
+    font-size: 2em;
 }
 
 .flex-container .hashtag-links {
@@ -54,6 +55,10 @@ header {
     padding-right: 10px;
 }
 
+.weekly, .monthly {
+    font-weight: bold;
+}
+
 /* Country Page Style */
 
 .visiting-cities li a {
@@ -67,4 +72,25 @@ header {
 
 .visiting-cities li {
     list-style: none;
+}
+
+
+/* Fonts */
+
+h1 {
+    font-size: 2.25em;
+}
+
+h2 {
+    font-size: 2em;
+}
+
+h3 {
+    font-size: 1.5em;
+}
+
+/* Submit Button */
+
+#submit-button {
+    border-radius: 10px;
 }
